# ai-boilerplate

./: .cursorrules  .dev.vars.example  .env.example  .gitignore  .npmrc  CATALYST_INTEGRATION.md  CHANGELOG.md  CUSTOMIZATION.md  DEPLOY-SHARDING.md  MIGRATION_GUIDE.md  MODEL-INSTRUCTIONS.md  PLATFORM_SHARING.md  PROJECT.md  README.md  README_MODERNIZED.md  SECURITY.md  SETUP.md  TASKS.md  TURBOREPO.md  biome.json  bun.lockb  claude_mcp_config.json  commitlint.config.js  package.json  plopfile.js  renovate.json  setup-husky.sh  tsconfig.json  turbo.json
.cursor/: rules.md
.github/: README.md
.github/scripts/: env.ts
.github/workflows/: deploy.yml
apps/backend/: .env.example  README.md  package.json  vitest.config.ts  wrangler.deploy.toml  wrangler.pages.toml  wrangler.toml
apps/desktop/: .gitignore  Cargo.toml  index.html  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
apps/desktop/capabilities/: default.json
apps/desktop/src/: App.tsx
apps/expo/: app.config.ts  app.json  babel.config.js  eas.json  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mobile/: .env.example  App.tsx  README.md  app.json  babel.config.js  package.json  (+1 more)
docs/: VOLUME-SHARDING.md  WRITE-API.md
scripts/: build-ci.sh  build.sh  check-updates.js  deploy-sharding.sh  deploy.sh  migrate-to-shards.js  setup-wizard.js  setup.sh  verify-build.sh
src-tauri/: tauri.conf.json
tanstack-hetzner/: CONTRIBUTING.md
templates/: endpoint.hbs  migration-alter.hbs  migration-create.hbs  migration-custom.hbs  migration.hbs  model.hbs
(+187 files in other folders)
