[package]
name = "boilerplate"
version = "0.1.0"
description = "AI-First Full-Stack Boilerplate"
authors = ["Your Name"]
edition = "2021"

[lib]
name = "boilerplate_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "boilerplate"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api", "protocol-asset", "native-tls-vendored"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-deep-link = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# iOS dependencies
[target.'cfg(target_os = "ios")'.dependencies]
tauri-plugin-log = "2.0.0"

# Android dependencies
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
jni = "0.21"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]